--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="logo">Crafty</div>
+        <div class="logo">Nakkashi</div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
@@ -25,7 +25,7 @@
     <section class="about-section">
         <!-- Title and Divider as seen in the image -->
         <div class="about-title-container">
-            <h1 class="about-title">About Crafty</h1>
+            <h1 class="about-title">About Nakkashi</h1>
             <div class="about-divider">
                 <!-- Icon can be a character, SVG, or font awesome -->
                 <span class="icon">&#x2726;</span>
@@ -43,8 +43,8 @@
             <!-- Right side: Text and Founder info -->
             <div class="about-text-container">
                 <h2>Jay Ganesh Abhale</h2>
-                <h3>Founder of Crafty</h3>
-                <p>Welcome to <strong>Crafty</strong> — your trusted destination for unique, handcrafted products made with love and passion. Our mission is to bring you high-quality, artisanal creations that add beauty and charm to your everyday life.</p>
+                <h3>Founder of Nakkashi</h3>
+                <p>Welcome to <strong>Nakkashi</strong> — your trusted destination for unique, handcrafted products made with love and passion. Our mission is to bring you high-quality, artisanal creations that add beauty and charm to your everyday life.</p>
                 <p>From intricately designed home décor to fashionable handmade accessories, every product at Crafty is created by skilled artisans who take pride in their work. We believe in sustainability, creativity, and the joy of owning something truly special.</p>
                 <p>Thank you for supporting our platform and the talented creators who make it possible. We’re more than just a store — we’re a community that celebrates art and craftsmanship.</p>
                 <!-- Placeholder for QR code from the reference image -->
