--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crafty - Contact</title>
+    <title>Nakkashi - Contact</title>
     <!-- Link to the external CSS file -->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,7 +11,7 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar">
-        <div class="logo">Crafty</div>
+        <div class="logo">Nakkashi</div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
@@ -77,8 +77,8 @@
                     </svg>
                 </div>
                 <h3>Call us</h3>
-                <p>Mon-Fri from 8am to 5pm.</p>
-                <a href="tel:+918866187039">+91 88661 87039</a>
+                <p><Mon-Sat></Mon-Sat> from 10 to 5pm.</p>
+                <a href="tel:+917623861655">+91 76238 61655</a>
             </div>
         </div>
     </section>
